branches/wip/Archive/91285022289f82474f9fc9bba5d11641-7063104e283ed82d51a6fde7370c6e59/output
main.cpp: In function 'Sales_data& combine(const Sales_data&)':
main.cpp:33:5: error: 'unitsSold' was not declared in this scope
     unitsSold += salesData.unitsSold;
     ^
main.cpp:24:23: error: 'unsigned int Sales_data::unitsSold' is private
  unsigned unitsSold = 0;
                       ^
main.cpp:33:28: error: within this context
     unitsSold += salesData.unitsSold;
                            ^
main.cpp:34:5: error: 'revenue' was not declared in this scope
     revenue += salesData.revenue;
     ^
main.cpp:25:19: error: 'double Sales_data::revenue' is private
  double revenue = 0.0;
                   ^
main.cpp:34:26: error: within this context
     revenue += salesData.revenue;
                          ^
main.cpp:35:13: error: invalid use of 'this' in non-member function
     return *this;
             ^
main.cpp:36:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
